<resources>
    <string name="app_name">ChefKlub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="chefklub">ChefKlub</string>
    <string name="welcome_get_recipes_of_your_favourite_meal">Welcome get recipes of your favourite meal</string>
    <string name="get_started">GET STARTED</string>
    <string name="registration">Registration</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="register">Register</string>
    <string name="already_registered">Already Registered?</string>
    <string name="sign_in">Sign In</string>
    <string name="login">login</string>
    <string name="Register">register</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="favourite_meal">Favourite Meals</string>
    <string name="easy_tips">Quick Tips</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipe">My Recipes</string>
    <string name="user">Johntez</string>
    <string name="mail">johntez@gmail.com</string>
    <string name="see_more">See more...</string>
    <string name="dinner_tips">Dinner Tips</string>
    <string name="item_name">Item Name</string>
    <string name="rating">Rating</string>
    <string name="duration">Duration</string>
    <string name="apprx_cost">Apprx Cost</string>
    <string name="ingredients">Ingredients</string>
    <string name="item_description">desc</string>
</resources>