<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/favorite_24"
            android:title="@string/favourite_meal" />
        <item
            android:id="@+id/nav_tips"
            android:icon="@drawable/info_24"
            android:title="@string/easy_tips" />
        <item
            android:id="@+id/nav_recipe"
            android:icon="@drawable/list_24"
            android:title="@string/recipe" />
    </group>
</menu>