<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.project.chefklub.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_fav"
        android:name="com.project.chefklub.ui.Favourite.FavouriteMealFragment"
        android:label="@string/favourite_meal"
        tools:layout="@layout/favourite_meal_fragement" />

    <fragment
        android:id="@+id/nav_tips"
        android:name="com.project.chefklub.ui.QuickTips.QuickTipsFragment"
        android:label="@string/easy_tips"
        tools:layout="@layout/fragment_quick_tips" />
    <fragment
        android:id="@+id/recipesFragment"
        android:name="com.project.chefklub.ui.recipes.RecipesFragment"
        android:label="@string/recipe"
        tools:layout="@layout/fragment_recipes" />

</navigation>